@@ -32,5 +32,25 @@
         </dependency>
     </dependencies>
 
-</project>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>com.pedro.netboundstar.app.Main</mainClass>
+                    <arguments>
+                        <!-- JVM Tuning for High Throughput Network App -->
+                        <argument>-XX:+UseZGC</argument>
+                        <argument>-XX:+ZGenerational</argument>
+                        <argument>-Xms2G</argument>
+                        <argument>-Xmx4G</argument>
+                        <argument>-XX:+AlwaysPreTouch</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
+</project>
